log/build_2026-04-28_14-25-17/voice_robot_pkg/stdout_stderr.log
running egg_info
writing ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/entry_points.txt
writing requirements to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/requires.txt
writing top-level names to ../../build/voice_robot_pkg/voice_robot_pkg.egg-info/top_level.txt
reading manifest file '../../build/voice_robot_pkg/voice_robot_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/voice_robot_pkg/voice_robot_pkg.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/main.py to main.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/main.py", line 339
    finally:
    ^^^^^^^
SyntaxError: invalid syntax

removing '/home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/voice_robot_pkg/voice_robot_pkg.egg-info to /home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/tanvi/ros2_ws/build/voice_robot_pkg/install.log'
